// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockTokensModal should handle unlock token transaction with error 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex items-end justify-between bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Locked Balance
                  </h1>
                  <div
                    class="flex items-center text-theme-secondary-text"
                    data-testid="header__subtitle"
                  >
                    View the details of your locked balances and waiting periods within the table below. Select the balances you wish to unlock once the waiting period has expired.
                  </div>
                </div>
              </div>
              <div
                class="py-3"
              >
                <div
                  class="relative border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <div
                    class="-mt-3 css-1m6rt2i"
                    role="table"
                  >
                    <table
                      cellpadding="0"
                      class="table-auto"
                    >
                      <thead>
                        <tr
                          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                          role="row"
                        >
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--0"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div
                                class=""
                              >
                                Amount
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="transition-transform rotate-180 css-15txs7d"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--1"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div
                                class=""
                              >
                                Time
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="transition-transform rotate-180 css-15txs7d"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--2"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top justify-end float-right flex-row-reverse"
                            >
                              <div
                                class=""
                              >
                                <span
                                  class="mr-3"
                                >
                                  Status
                                </span>
                                <input
                                  checked=""
                                  class="css-7i915u"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          class=" css-1li86da"
                          data-testid="TableRow"
                        >
                          <td>
                            <div
                              class="css-mx19qq"
                            >
                              <span
                                class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
                                data-testid="Amount"
                              >
                                30 DARK
                              </span>
                            </div>
                          </td>
                          <td>
                            <div
                              class="css-1rods8x"
                            >
                              <time
                                class="text-theme-secondary-700"
                                datetime="Wed, 01 Jan 2020 00:00:00 GMT"
                              >
                                01 Jan 2020 at 00:00:00 (6 months ago)
                              </time>
                            </div>
                          </td>
                          <td>
                            <div
                              class="justify-end css-br23tb"
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <span
                                    class="text-theme-secondary-700"
                                    data-testid="UnlockableBalanceRow__status"
                                  >
                                    Unlockable
                                  </span>
                                  <div
                                    class="mr-3 ml-2 text-theme-primary-600 css-1i4b0eq"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      unlock-token.svg
                                    </svg>
                                  </div>
                                </div>
                                <input
                                  class="css-7i915u"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="mt-4 flex items-center justify-between"
                >
                  <div
                    class="flex flex-col items-start"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="mb-2 text-sm font-semibold text-theme-secondary-500"
                    >
                      Total Amount
                    </p>
                    <div
                      class="css-1vb1527"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          + 30 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-col items-end"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="mb-2 text-sm font-semibold text-theme-secondary-500"
                    >
                      Transaction Fee
                    </p>
                    <div
                      class="css-fbeerz"
                      color="danger"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          - 0.00147 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="css-1jhy6v9"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Close
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Unlock
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with error 2`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex items-end justify-between bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Unlock Balance
                  </h1>
                </div>
              </div>
              <div
                class="no-ligatures pt-4 css-1pgzjzy"
                data-testid="TransactionSender"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Sender
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="w-0 flex-1 overflow-auto text-right md:text-left"
                    >
                      <div
                        class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                          data-testid="Address__address"
                        >
                          DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center -space-x-1"
                >
                  <div
                    class="shrink-0 css-8d0u1i"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    >
                      <img
                        alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                        title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="no-ligatures css-19d5ufe"
                data-testid="TransactionAmount"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Total Amount
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="css-1vb1527"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          + 30 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="no-ligatures css-19d5ufe"
                data-testid="TransactionFee"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Transaction Fee
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      0.00147 DARK
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="css-1jhy6v9"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Confirm
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with error 3`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="space-y-6"
                data-testid="AuthenticationStep"
              >
                <div
                  class="flex items-end justify-between bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Authenticate
                    </h1>
                    <div
                      class="flex items-center text-theme-secondary-text"
                      data-testid="header__subtitle"
                    >
                      Enter your mnemonic passphrase to authenticate the transaction.
                    </div>
                  </div>
                </div>
                <fieldset
                  class="flex flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="mnemonic"
                  >
                    Mnemonic
                  </label>
                  <div
                    class="css-1psxlcd"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="AuthenticationStep__mnemonic"
                        name="mnemonic"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <button
                          class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="InputPassword__toggle"
                          type="button"
                        >
                          <div
                            class="css-1i4b0eq"
                            height="20"
                            width="20"
                          >
                            <svg>
                              eye.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                class="flex justify-end space-x-3 pt-3"
              >
                <button
                  class="css-1jhy6v9"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UnlockTokensAuthentication__send"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Send
                    </span>
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with error 4`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                data-testid="ErrorStep"
              >
                <div
                  class="space-y-8"
                >
                  <div
                    class="flex items-end justify-between bg-theme-background"
                  >
                    <div
                      class="space-y-4"
                    >
                      <h1
                        class="mb-0 text-2xl"
                        data-testid="header__title"
                      >
                        Transaction Error
                      </h1>
                    </div>
                  </div>
                  <svg
                    class="hidden w-full md:block"
                  >
                    transaction-error-banner-light-green.svg
                  </svg>
                  <div
                    class="space-y-6"
                  >
                    <p
                      class="hidden text-theme-secondary-text md:block"
                    >
                      An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                    </p>
                    <div
                      class="flex flex-col overflow-hidden rounded-xl md:hidden"
                    >
                      <div
                        class="css-ic0qlc"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg>
                            circle-cross.svg
                          </svg>
                        </div>
                        <span>
                          Error
                        </span>
                      </div>
                      <div
                        class="css-6o9bco"
                      >
                        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                      </div>
                    </div>
                    <div
                      class="py-4 css-qner8f"
                      disabled=""
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <textarea
                          autocomplete="off"
                          class="no-ligatures w-full border-none resize-none text-theme-secondary-text css-1nupw50"
                          data-testid="ErrorStep__errorMessage"
                          disabled=""
                          style="height: 4px;"
                          type="text"
                        >
                          {"message":"unable to unlock token","type":"Error"}
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="css-1tkbsa1"
                >
                  <div
                    class="mr-auto"
                  >
                    <div
                      class="relative"
                    >
                      <button
                        class="css-1jhy6v9"
                        data-testid="clipboard-button__wrapper"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div
                            class="css-1i4b0eq"
                            height="20"
                            width="20"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                          <span
                            class="hidden sm:block"
                          >
                            Copy
                          </span>
                        </div>
                      </button>
                    </div>
                  </div>
                  <button
                    class="css-1bx0hyc"
                    data-testid="ErrorStep__repeat-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="whitespace-nowrap"
                      >
                        Retry
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex items-end justify-between bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Locked Balance
                  </h1>
                  <div
                    class="flex items-center text-theme-secondary-text"
                    data-testid="header__subtitle"
                  >
                    View the details of your locked balances and waiting periods within the table below. Select the balances you wish to unlock once the waiting period has expired.
                  </div>
                </div>
              </div>
              <div
                class="py-3"
              >
                <div
                  class="relative border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <div
                    class="-mt-3 css-1m6rt2i"
                    role="table"
                  >
                    <table
                      cellpadding="0"
                      class="table-auto"
                    >
                      <thead>
                        <tr
                          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                          role="row"
                        >
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--0"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div
                                class=""
                              >
                                Amount
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="transition-transform rotate-180 css-15txs7d"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--1"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div
                                class=""
                              >
                                Time
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="transition-transform rotate-180 css-15txs7d"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--2"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top justify-end float-right flex-row-reverse"
                            >
                              <div
                                class=""
                              >
                                <span
                                  class="mr-3"
                                >
                                  Status
                                </span>
                                <input
                                  checked=""
                                  class="css-7i915u"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          class=" css-1li86da"
                          data-testid="TableRow"
                        >
                          <td>
                            <div
                              class="css-mx19qq"
                            >
                              <span
                                class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
                                data-testid="Amount"
                              >
                                30 DARK
                              </span>
                            </div>
                          </td>
                          <td>
                            <div
                              class="css-1rods8x"
                            >
                              <time
                                class="text-theme-secondary-700"
                                datetime="Wed, 01 Jan 2020 00:00:00 GMT"
                              >
                                01 Jan 2020 at 00:00:00 (6 months ago)
                              </time>
                            </div>
                          </td>
                          <td>
                            <div
                              class="justify-end css-br23tb"
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <span
                                    class="text-theme-secondary-700"
                                    data-testid="UnlockableBalanceRow__status"
                                  >
                                    Unlockable
                                  </span>
                                  <div
                                    class="mr-3 ml-2 text-theme-primary-600 css-1i4b0eq"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      unlock-token.svg
                                    </svg>
                                  </div>
                                </div>
                                <input
                                  class="css-7i915u"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="mt-4 flex items-center justify-between"
                >
                  <div
                    class="flex flex-col items-start"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="mb-2 text-sm font-semibold text-theme-secondary-500"
                    >
                      Total Amount
                    </p>
                    <div
                      class="css-1vb1527"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          + 30 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-col items-end"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="mb-2 text-sm font-semibold text-theme-secondary-500"
                    >
                      Transaction Fee
                    </p>
                    <div
                      class="css-fbeerz"
                      color="danger"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          - 0.00147 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="css-1jhy6v9"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Close
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Unlock
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 2`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex items-end justify-between bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Unlock Balance
                  </h1>
                </div>
              </div>
              <div
                class="no-ligatures pt-4 css-1pgzjzy"
                data-testid="TransactionSender"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Sender
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="w-0 flex-1 overflow-auto text-right md:text-left"
                    >
                      <div
                        class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                          data-testid="Address__address"
                        >
                          DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center -space-x-1"
                >
                  <div
                    class="shrink-0 css-8d0u1i"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    >
                      <img
                        alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                        title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="no-ligatures css-19d5ufe"
                data-testid="TransactionAmount"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Total Amount
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="css-1vb1527"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          + 30 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="no-ligatures css-19d5ufe"
                data-testid="TransactionFee"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Transaction Fee
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      0.00147 DARK
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="css-1jhy6v9"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Confirm
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 3`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="space-y-6"
                data-testid="AuthenticationStep"
              >
                <div
                  class="flex items-end justify-between bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Authenticate
                    </h1>
                    <div
                      class="flex items-center text-theme-secondary-text"
                      data-testid="header__subtitle"
                    >
                      Enter your mnemonic passphrase to authenticate the transaction.
                    </div>
                  </div>
                </div>
                <fieldset
                  class="flex flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="mnemonic"
                  >
                    Mnemonic
                  </label>
                  <div
                    class="css-1psxlcd"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="AuthenticationStep__mnemonic"
                        name="mnemonic"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <button
                          class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="InputPassword__toggle"
                          type="button"
                        >
                          <div
                            class="css-1i4b0eq"
                            height="20"
                            width="20"
                          >
                            <svg>
                              eye.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                class="flex justify-end space-x-3 pt-3"
              >
                <button
                  class="css-1jhy6v9"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UnlockTokensAuthentication__send"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Send
                    </span>
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 4`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <section
                class="space-y-8"
                data-testid="TransactionSuccessful"
              >
                <div
                  class="flex items-end justify-between bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Successfully Unlocked Balance
                    </h1>
                  </div>
                </div>
                <svg
                  class="hidden w-full md:block"
                >
                  transaction-success-banner-light-green.svg
                </svg>
                <p
                  class="hidden text-theme-secondary-text md:block"
                >
                  Your balance unlock transaction has been sent successfully.
                </p>
                <div
                  class="flex flex-col overflow-hidden rounded-xl md:hidden"
                >
                  <div
                    class="css-1dwg83m"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        circle-check-mark.svg
                      </svg>
                    </div>
                    <span>
                      Success
                    </span>
                  </div>
                  <div
                    class="css-k5jr4t"
                  >
                    Your balance unlock transaction has been sent successfully.
                  </div>
                </div>
                <div>
                  <div
                    class="no-ligatures css-9iovq0"
                    data-testid="TransactionDetail"
                  >
                    <div
                      class="w-40 flex-1 space-y-2 whitespace-nowrap"
                      data-testid="TransactionDetail--desktop"
                    >
                      <div
                        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        ID
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <div
                          class="flex w-full items-center space-x-3 overflow-hidden"
                        >
                          <span
                            class="overflow-hidden"
                          >
                            <a
                              class="ring-focus group inline-block flex items-center css-15tcy38"
                              data-ring-focus-margin="-m-1"
                              data-testid="Link"
                              href="https://test.arkscan.io/transaction/adaf8f61b332611c6d4bd6ac3e75bafc7c82eeee8a4bee14ded471f1373cd23a"
                              rel="noopener noreferrer"
                            >
                              <span
                                class="css-1y2194z"
                              >
                                <span
                                  class="css-0"
                                  data-testid="TruncateMiddle"
                                >
                                  adaf8f61b332611c6d4bd6ac3e…ee8a4bee14ded471f1373cd23a
                                </span>
                              </span>
                              <div
                                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                                data-testid="Link__external"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  arrow-external.svg
                                </svg>
                              </div>
                            </a>
                          </span>
                          <span
                            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                          >
                            <button
                              class="ring-focus relative focus:outline-none"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="css-v0ob3f"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  copy.svg
                                </svg>
                              </div>
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="no-ligatures css-19rivvh"
                    data-testid="TransactionType"
                  >
                    <div
                      class="w-40 flex-1 space-y-2 whitespace-nowrap"
                      data-testid="TransactionDetail--desktop"
                    >
                      <div
                        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Transaction Type
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        Unlock Balance
                      </div>
                    </div>
                    <div
                      class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-14jhlj1"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          unlock-token.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="no-ligatures css-19rivvh"
                    data-testid="TransactionNetwork"
                  >
                    <div
                      class="w-40 flex-1 space-y-2 whitespace-nowrap"
                      data-testid="TransactionDetail--desktop"
                    >
                      <div
                        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Cryptoasset
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        ARK Devnet
                      </div>
                    </div>
                    <div
                      aria-label="ARK Devnet"
                      class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
                      data-testid="NetworkIcon-ARK-ark.devnet"
                    >
                      <div
                        class="css-1i4b0eq"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="no-ligatures css-19rivvh"
                    data-testid="TransactionSender"
                  >
                    <div
                      class="w-40 flex-1 space-y-2 whitespace-nowrap"
                      data-testid="TransactionDetail--desktop"
                    >
                      <div
                        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Sender
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <div
                          class="w-0 flex-1 overflow-auto text-right md:text-left"
                        >
                          <div
                            class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                              data-testid="Address__address"
                            >
                              DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center -space-x-1"
                    >
                      <div
                        class="shrink-0 css-8d0u1i"
                        data-testid="Avatar"
                      >
                        <div
                          class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                        >
                          <img
                            alt="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"40\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                            title="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="no-ligatures css-19rivvh"
                    data-testid="TransactionAmount"
                  >
                    <div
                      class="w-40 flex-1 space-y-2 whitespace-nowrap"
                      data-testid="TransactionDetail--desktop"
                    >
                      <div
                        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Total Amount
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <div
                          class="css-1vb1527"
                          color="success"
                        >
                          <div
                            class="flex space-x-1 items-stretch"
                          >
                            <span
                              class="whitespace-nowrap"
                              data-testid="Amount"
                            >
                              + 30 DARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="no-ligatures css-19rivvh"
                    data-testid="TransactionFee"
                  >
                    <div
                      class="w-40 flex-1 space-y-2 whitespace-nowrap"
                      data-testid="TransactionDetail--desktop"
                    >
                      <div
                        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Transaction Fee
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          0.00147 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="no-ligatures css-19rivvh"
                    data-testid="TransactionTimestamp"
                  >
                    <div
                      class="w-40 flex-1 space-y-2 whitespace-nowrap"
                      data-testid="TransactionDetail--desktop"
                    >
                      <div
                        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Timestamp
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        01.07.2020 12:00 AM
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should render 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-9cp55s"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <div
            class="flex flex-1 flex-col"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex items-end justify-between bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Locked Balance
                  </h1>
                  <div
                    class="flex items-center text-theme-secondary-text"
                    data-testid="header__subtitle"
                  >
                    View the details of your locked balances and waiting periods within the table below. Select the balances you wish to unlock once the waiting period has expired.
                  </div>
                </div>
              </div>
              <div
                class="py-3"
              >
                <div
                  class="relative border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <div
                    class="-mt-3 css-1m6rt2i"
                    role="table"
                  >
                    <table
                      cellpadding="0"
                      class="table-auto"
                    >
                      <thead>
                        <tr
                          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                          role="row"
                        >
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--0"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div
                                class=""
                              >
                                Amount
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="transition-transform rotate-180 css-15txs7d"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--1"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div
                                class=""
                              >
                                Time
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="transition-transform rotate-180 css-15txs7d"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold"
                            colspan="1"
                            data-testid="table__th--2"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top justify-end float-right flex-row-reverse"
                            >
                              <div
                                class=""
                              >
                                <span
                                  class="mr-3"
                                >
                                  Status
                                </span>
                                <input
                                  checked=""
                                  class="css-7i915u"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          class=" css-1li86da"
                          data-testid="TableRow"
                        >
                          <td>
                            <div
                              class="css-mx19qq"
                            >
                              <span
                                class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
                                data-testid="Amount"
                              >
                                30 DARK
                              </span>
                            </div>
                          </td>
                          <td>
                            <div
                              class="css-1rods8x"
                            >
                              <time
                                class="text-theme-secondary-700"
                                datetime="Wed, 01 Jan 2020 00:00:00 GMT"
                              >
                                01 Jan 2020 at 00:00:00 (6 months ago)
                              </time>
                            </div>
                          </td>
                          <td>
                            <div
                              class="justify-end css-br23tb"
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <span
                                    class="text-theme-secondary-700"
                                    data-testid="UnlockableBalanceRow__status"
                                  >
                                    Unlockable
                                  </span>
                                  <div
                                    class="mr-3 ml-2 text-theme-primary-600 css-1i4b0eq"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      unlock-token.svg
                                    </svg>
                                  </div>
                                </div>
                                <input
                                  class="css-7i915u"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="mt-4 flex items-center justify-between"
                >
                  <div
                    class="flex flex-col items-start"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="mb-2 text-sm font-semibold text-theme-secondary-500"
                    >
                      Total Amount
                    </p>
                    <div
                      class="css-1vb1527"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          + 30 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-col items-end"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="mb-2 text-sm font-semibold text-theme-secondary-500"
                    >
                      Transaction Fee
                    </p>
                    <div
                      class="css-fbeerz"
                      color="danger"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          - 0.00147 DARK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="css-1jhy6v9"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Close
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Unlock
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
